feat(config): integrate dotenv to load .env dynamically without hardcoding values